<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/menu_administrar_categorias"
        android:onClick="administrarCategorias"
        android:title="@string/administrar_categor_as" />
    <item
        android:id="@+id/menu_cerrar_sesion"
        android:onClick="cerrarSesion"
        android:title="@string/cerrar_sesi_n" />
    <item
        android:id="@+id/menu_contactar"
        android:onClick="contactar"
        android:title="@string/contactar" />
    <item
        android:id="@+id/menu_redireccion"
        android:onClick="redireccion"
        android:title="@string/consultar_email_filtrado" />
    <item
        android:id="@+id/menu_sobre_pandora"
        android:onClick="sobrePandora"
        android:title="@string/sobre_pandora" />
    <item
        android:id="@+id/menu_eliminar_cuenta"
        android:onClick="eliminarCuenta"
        android:title="@string/eliminar_cuenta" />
</menu>