<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".actividades.Inicio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inicio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:forceDarkAllowed="false">

        <TextView
            android:id="@+id/inicio_bienvenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="42dp"
            android:text="@string/inicio_bienvenido"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/inicio_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/inicio_logo"
            android:layout_width="315dp"
            android:layout_height="200dp"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="7dp"
            android:contentDescription="@string/inicio_logo"
            app:layout_constraintBottom_toTopOf="@+id/inicio_login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/pandora_texto_borde_blanco" />

        <Button
            android:id="@+id/inicio_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="26dp"
            android:onClick="goLogin"
            android:text="@string/inicio_login"
            app:layout_constraintBottom_toTopOf="@+id/inicio_texto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inicio_registro"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="26dp"
            android:onClick="goRegistro"
            android:text="@string/inicio_registro"
            app:layout_constraintBottom_toTopOf="@+id/inicio_texto2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/inicio_contacto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="95dp"
            android:layout_marginBottom="62dp"
            android:onClick="goContacto"
            android:text="@string/inicio_contacto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/inicio_texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/inicio_texto2"
            app:layout_constraintBottom_toTopOf="@+id/inicio_contacto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/inicio_texto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/inicio_texto"
            app:layout_constraintBottom_toTopOf="@+id/inicio_registro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>