<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/login_texto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="32dp"
        android:text="@string/iniciar_sesi_n"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/login_texto_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_texto_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/email"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/login_entrada_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_texto" />

    <EditText
        android:id="@+id/login_entrada_usuario"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="33dp"
        android:ems="10"
        android:hint="@string/example_example_example"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/login_texto_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_texto_usuario"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/login_texto_clave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="33dp"
        android:text="@string/clave_maestra"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/login_entrada_clave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_entrada_usuario" />

    <EditText
        android:id="@+id/login_entrada_clave"
        android:inputType="textPassword"
        android:layout_width="294dp"
        android:layout_height="50dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:hint="@string/introduzca_su_clave_maestra"
        app:layout_constraintBottom_toTopOf="@+id/login_entrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_texto_clave"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/login_entrar"
        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:onClick="entrar"
        android:text="@string/entrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>