<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/crea_categoria_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/principalnav_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topbar_botones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="cancel"
                app:srcCompat="@android:drawable/ic_menu_close_clear_cancel"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/topbar_titulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/crear_categor_a"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/topbar_relleno"
                android:clickable="false"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="54dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/todo" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/crear_categoria_1_texto"
        android:layout_width="336dp"
        android:layout_height="139dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="22dp"
        android:text="@string/qu_nombre_desea_para_la_nueva_categor_a"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crear_categoria_1_texto2"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="22dp"
        android:text="@string/introduzca_el_nombre"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_categoria_1_texto" />

    <EditText
        android:id="@+id/crear_categoria_1_nombre"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="22dp"
        android:hint="@string/nombre"
        android:inputType="text"
        android:maxLength="30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_categoria_1_texto2"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/crear_categoria_1_button_confirmar"
        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:onClick="confirmar"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>