<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/principalnav_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/topbar_botones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/topbar_titulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/crear_contrase_a"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/crear_contraseña_texto"
        android:layout_width="323dp"
        android:layout_height="152dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="22dp"
        android:text="@string/con_qu_usuarios_quiere_compartir_la_contrase_a"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/crear_contraseña_texto2"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="22dp"
        android:text="@string/introduzca_los_correos_electr_nicos_separados_por_comas"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_contraseña_texto" />

    <EditText
        android:id="@+id/crear_contraseña_correos"
        android:layout_width="326dp"
        android:layout_height="40dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="22dp"
        android:hint="@string/email_example_es_email2_ex_es"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_contraseña_texto2"
        android:importantForAutofill="no" />

    <Button
        style="@android:style/Widget.DeviceDefault.Light.Button.Toggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:onClick="confirmar"
        android:text="@string/confirmar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>