<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="41dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/registro_texto"
            android:layout_width="282dp"
            android:layout_height="119dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="89dp"
            android:text="@string/registro_texto"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@+id/registro_texto_correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/registro_texto_correo"
            android:layout_width="245dp"
            android:layout_height="85dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="28dp"
            android:text="@string/registro_texto_correo"
            android:textAlignment="center"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/registro_correo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/registro_correo"
            android:layout_width="305dp"
            android:layout_height="57dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="108dp"
            android:text="@string/registro_hint_correo"
            app:layout_constraintBottom_toTopOf="@+id/registro_siguiente"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.318"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/registro_siguiente"
            android:layout_width="145dp"
            android:layout_height="54dp"
            android:layout_marginStart="217dp"
            android:layout_marginEnd="49dp"
            android:layout_marginBottom="120dp"
            android:onClick="goSiguiente"
            android:text="@string/registro_siguiente"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/registro_long_correo"
            android:layout_width="37dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="302dp"
            android:text="@string/registro_long_correo"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/registro_correo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>